--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +15,11 @@ a {
   color: #000;
   text-decoration: none;
 }
-/* html {
+html {
+  width: 100%;
+  height: 100%;
 }
 body {
-} */
+  width: 100%;
+  height: 100%;
+}
